[project]
name = "helper-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "duckduckgo-search>=8.1.1",
    "langchain-deepseek>=0.1.4",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.5.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
